# routers/index.js
@@ -5,7 +5,7 @@ import { BaanController } from '../controllers/baanController.js';
 import { BhaaiController } from '../controllers/bhaaiController.js';
 import { handelError } from '../utils/errorHandler.js';
 import { pariwarRouter } from './pariwarRouter.js';
-import { customerRouter } from './customerRouter.js';
+import { CustomerController } from '../controllers/customerController.js';
 
 const router = Router();
 
@@ -13,12 +13,14 @@ router.use('/pariwar', pariwarRouter );
 
 router.use('/bhaai', bhaaiRouter);
 
-router.get('/search',  handelError(BaanController.searchBaan));
-
-router.post('/giveBaan', handelError(BhaaiController.giveBaan) );
-
 router.use('/auth', authRouter);
 
-router.use('/customer', customerRouter);
+router.get('/customer', handelError(CustomerController.search));
+
+router.get('/profile',  handelError(CustomerController.profile));
+
+router.get('/search',  handelError(BaanController.searchBaan));
+
+router.post('/giveBaan', handelError(BhaaiController.giveBaan));
 
 export const appRouter = router;
